--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,14 @@
 /client/node_modules
 /studio/node_modules
 /contracts/node_modules
+node_modules
+.env
+coverage
+coverage.json
+typechain
+
+#Hardhat files
+cache
+artifacts
+hardhat.config.js
+/contracts/hardhat.config.js
